[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Controllers/CollisionBoxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controllers/CollisionBoxes/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )

[node name="Center" type="Position2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." groups=[
"Enemies",
] instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 2147483648

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="HitBox" parent="." instance=ExtResource( 4 )]
monitorable = false
collision_mask = 4

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="enemyDied" from="EnemyStats" to="." method="_on_EnemyStats_enemyDied"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
